Replace existing file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Peking University
 <li><p><b>Distributed zeroth-order optimization</b>: We develop model-free distributed zeroth-order optimization algorithms for multi-agent systems, with rigorous theoretical analysis on their performance.
 </p>
 </li>
-<li><p><b>Data-driven and learning-based control</b>: We study the design and analysis of data-driven learning-based control methods. Particularly, we are interested in investigating control problems from an optimization viewpoint, by analyzing their optimization landscape properties and designing reinforcement learning algorithms with performance guarantees.
+<li><p><b>Data-driven learning-based control</b>: We study the design and analysis of data-driven learning-based control methods. Particularly, we are interested in investigating control problems from an optimization viewpoint, by analyzing their optimization landscape properties and designing reinforcement learning algorithms with performance guarantees.
 </p>
 </li>
 <li><p><b>Applications in smart grids</b>: We have been working on applying advanced optimization methods to the operation and control of smart grids with distributed energy resources.</p>
@@ -62,7 +62,7 @@ Peking University
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-07 23:24:30 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-08 00:29:45 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
