Replace existing file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ MathJax.Hub.Config({
 <h1>Yujie Tang 唐聿劼</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="yujie_photo.png" alt="Yujie Tang" width="150px" height="200px" />&nbsp;</td>
+<img src="yujie_photo.jpg" alt="Yujie Tang" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor
 </p>
 <p>Department of Industrial Engineering and Management<br />
@@ -62,7 +62,7 @@ Peking University
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-08 00:29:45 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-08 00:50:08 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
