--- a/publications.html
+++ b/publications.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
@@ -33,15 +34,21 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints</h2>
 <ol>
-<li><p><b>Yujie Tang</b>, Yang Zheng and Na Li. &ldquo;Analysis of the optimization landscape of linear quadratic Gaussian control,&rdquo; submitted to <i>Mathematical Programming</i>, under review. [<a href="https://arxiv.org/abs/2102.04393" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p><b>Yujie Tang</b> and Yang Zheng. &ldquo;On the global optimality of direct policy search for nonsmooth \(H_\infty\) output-feedback control,&rdquo; submitted. [<a href="https://arxiv.org/abs/2304.00753" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Zhaolin Ren and Na Li. “Zeroth-order feedback optimization for cooperative multi-agent systems,” to appear in Automatica. [<a href="https://arxiv.org/abs/2011.09728" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Zhaolin Ren, <b>Yujie Tang</b> and Na Li. &ldquo;Escaping saddle points in zeroth-order optimization: the power of two-point estimators,&rdquo; to appear in <i>the Fortieth International Conference on Machine Learning (ICML 2023)</i>. [<a href="https://openreview.net/pdf?id=qZ1reqm5BM" target=&ldquo;blank&rdquo;>link</a>]
 </p>
 </li>
 </ol>
 <h2>Journal Articles</h2>
 <ol>
+<li><p><b>Yujie Tang</b>, Yang Zheng and Na Li. &ldquo;Analysis of the optimization landscape of linear quadratic Gaussian control,&rdquo; <i>Mathematical Programming</i>, 2023. DOI: 10.1007/s10107-023-01938-4. [<a href="https://arxiv.org/abs/2102.04393" target=&ldquo;blank&rdquo;>arXiv</a>]
+</p>
+</li>
+<li><p><b>Yujie Tang</b>, Zhaolin Ren and Na Li. “Zeroth-order feedback optimization for cooperative multi-agent systems,” <i>Automatica</i>, vol. 148, 110741, 2023. [<a href="https://arxiv.org/abs/2011.09728" target=&ldquo;blank&rdquo;>arXiv</a>]
+</p>
+</li>
 <li><p><b>Yujie Tang</b>, Emiliano Dall’Anese, Andrey Bernstein and Steven Low. &ldquo;Running primal-dual gradient method for time-varying nonconvex problems,&rdquo; <i>SIAM Journal on Control and Optimization</i>, vol. 60, no. 4, pp. 1970&ndash;1990, 2022. [<a href="https://arxiv.org/abs/1812.00613" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
@@ -104,7 +111,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-07 23:24:30 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-06-24 10:16:16 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
