--- a/teaching.html
+++ b/teaching.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
@@ -6,15 +7,6 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Teaching</title>
-<!-- MathJax -->
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
-</script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-	  TeX: { equationNumbers: { autoNumber: "AMS" } }
-});
-</script>
-<!-- End MathJax -->
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -31,6 +23,14 @@ MathJax.Hub.Config({
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
+<h3>Fundamentals of Distributed Optimization, Peking University</h3>
+<p>This course introduces fundamentals of distributed optimization for beginning graduate students in engineering and applied mathematics, with an emphasis on the theoretical aspects. Topics covered in this course include a review of convex analysis and centralized first-order methods, consensus methods for distributed averaging, decentralized gradient descent, gradient tracking methods, decentralized ADMM, time-varying communication networks, and a brief introduction to distributed optimization in federated learning.
+</p>
+<ul>
+<li><p><a href="files/Notes_on_Distributed_Optimization.pdf" target=&ldquo;blank&rdquo;>Lecture Notes</a> (Working draft. Any feedback will be appreciated!)
+</p>
+</li>
+</ul>
 <h3><a href="https://jinmingxu.github.io/summer_school2022.html" target=&ldquo;blank&rdquo;>ZJU-CSE Summer School 2022</a></h3>
 <ul>
 <li><p>Lecture on zeroth-order optimization and reinforcement learning
@@ -77,7 +77,7 @@ ACM/CMS 113&nbsp;&nbsp;&nbsp;Fall 2014&nbsp;&nbsp;&nbsp;Instructor: Venkat Chand
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-07 23:24:30 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-06-24 10:14:05 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
