--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
@@ -6,15 +7,6 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Yujie Tang 唐聿劼</title>
-<!-- MathJax -->
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
-</script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-	  TeX: { equationNumbers: { autoNumber: "AMS" } }
-});
-</script>
-<!-- End MathJax -->
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -43,6 +35,11 @@ Peking University
 [<a href="https://orcid.org/0000-0002-4921-8372" target=&ldquo;blank&rdquo;>ORCID</a>] [<a href="https://scholar.google.com/citations?user=g61gTKsAAAAJ" target=&ldquo;blank&rdquo;>Google Scholar</a>]
 </p>
 </td></tr></table>
+<div class="infoblock">
+<div class="blockcontent">
+<p><b>Postdoc openings on optimization and reinforcement learning are available! See <a href="files/Postdoc_You_Tang.pdf" target=&ldquo;blank&rdquo;>here</a> for more details.</b>
+</p>
+</div></div>
 <h2>Biography</h2>
 <p>I am an Assistant Professor in the Department of Industrial Engineering and Management at Peking University.
 </p>
@@ -62,7 +59,7 @@ Peking University
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-08 00:50:08 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-06-26 15:21:21 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
