--- a/presentations.html
+++ b/presentations.html
@@ -33,6 +33,20 @@ MathJax.Hub.Config({
 </div>
 <h2>Selected Talks</h2>
 <ul>
+<li><p>On the Global Optimality of Direct Policy Search for Nonsmooth \(\mathcal{H}_\infty\) Output-Feedback Control [<a href="files/slides_CMS_Annual_2023.pdf" target=&ldquo;blank&rdquo;>slides</a>]
+</p>
+<ul>
+<li><p>Chinese Mathematical Society 2023 Annual Conference
+</p>
+</li></ul>
+</li>
+<li><p>Model-Free Optimization and Learning for Multi-Agent Systems [<a href="files/slides_cdc2023_workshop.pdf" target=&ldquo;blank&rdquo;>slides</a>]
+</p>
+<ul>
+<li><p>IEEE CDC 2023 Pre-Conference Workshop <i>Distributed Control, Optimization and Learning for Multi-agent Systems</i>
+</p>
+</li></ul>
+</li>
 <li><p>Linear Quadratic Control from an Optimization View point [<a href="files/LQ_control_optimization_viewpoint.pdf" target=&ldquo;blank&rdquo;>slides</a>]
 </p>
 <ul>
@@ -133,7 +147,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-07 23:24:30 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-04-12 17:09:20 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
