--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
@@ -34,16 +33,25 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints</h2>
 <ol>
-<li><p><b>Yujie Tang</b> and Yang Zheng. &ldquo;On the global optimality of direct policy search for nonsmooth \(H_\infty\) output-feedback control,&rdquo; submitted. [<a href="https://arxiv.org/abs/2304.00753" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Silan Zhang and <b>Yujie Tang</b>. &ldquo;Zeroth-order Katyusha: An accelerated derivative-free method for composite convex optimization.&rdquo; [<a href="files/Zeroth-Order_Katyusha_1.pdf" target=&ldquo;blank&rdquo;>link</a>]
 </p>
 </li>
-<li><p>Zhaolin Ren, <b>Yujie Tang</b> and Na Li. &ldquo;Escaping saddle points in zeroth-order optimization: the power of two-point estimators,&rdquo; to appear in <i>the Fortieth International Conference on Machine Learning (ICML 2023)</i>. [<a href="https://openreview.net/pdf?id=qZ1reqm5BM" target=&ldquo;blank&rdquo;>link</a>]
+<li><p>Yang Zheng, Chih-fan Pai and <b>Yujie Tang</b>. &ldquo;Benign nonconvex landscapes in optimal and robust control, Part I: Global optimality.&rdquo; [<a href="https://arxiv.org/abs/2312.15332" target=&ldquo;blank&rdquo;>arXiv</a>]
+</p>
+</li>
+<li><p>Ruiyang Jin, <b>Yujie Tang</b> and Jie Song. &ldquo;Zeroth-order feedback-based optimization for distributed demand response.&rdquo; [<a href="https://arxiv.org/abs/2311.00372" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
 </ol>
 <h2>Journal Articles</h2>
 <ol>
-<li><p><b>Yujie Tang</b>, Yang Zheng and Na Li. &ldquo;Analysis of the optimization landscape of linear quadratic Gaussian control,&rdquo; <i>Mathematical Programming</i>, 2023. DOI: 10.1007/s10107-023-01938-4. [<a href="https://arxiv.org/abs/2102.04393" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yize Li, Chao Lu, <b>Yujie Tang</b>, Chen Fang, Yong Cui. &ldquo;Dynamic control and time-delayed channel scheduling co-design for voltage control in active distribution networks,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 15, no. 2, pp. 1837&ndash;1848, 2024.
+</p>
+</li>
+<li><p><b>Yujie Tang</b>, Yang Zheng and Na Li. &ldquo;Analysis of the optimization landscape of Linear Quadratic Gaussian (LQG) control,&rdquo; <i>Mathematical Programming</i>, vol. 202, pp. 399&ndash;444, 2023. [<a href="https://arxiv.org/abs/2102.04393" target=&ldquo;blank&rdquo;>arXiv</a>]
+</p>
+</li>
+<li><p>Tianpeng Zhang, Victor Qin, <b>Yujie Tang</b> and Na Li. &ldquo;Distributed information-based source seeking,&rdquo; <i>IEEE Transactions on Robotics</i>, vol. 39, no. 6, pp. 4749&ndash;4767, 2023. [<a href="https://arxiv.org/abs/2209.09421" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
 <li><p><b>Yujie Tang</b>, Zhaolin Ren and Na Li. “Zeroth-order feedback optimization for cooperative multi-agent systems,” <i>Automatica</i>, vol. 148, 110741, 2023. [<a href="https://arxiv.org/abs/2011.09728" target=&ldquo;blank&rdquo;>arXiv</a>]
@@ -58,7 +66,7 @@ MathJax.Hub.Config({
 <li><p><b>Yujie Tang</b>, Vikram Ramanathan, Junshan Zhang and Na Li. “Communication-efficient distributed SGD with compressed sensing,” <i>IEEE Control Systems Letters</i>, vol. 6, pp. 2054&ndash;2059.
 </p>
 </li>
-<li><p>Yingying Li, <b>Yujie Tang</b>, Runyu Zhang and Na Li. “Distributed reinforcement learning for decentralized linear quadratic control: A derivative-free policy optimization approach,” IEEE Transactions on Automatic Control. [<a href="https://arxiv.org/abs/1912.09135" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yingying Li, <b>Yujie Tang</b>, Runyu Zhang and Na Li. “Distributed reinforcement learning for decentralized linear quadratic control: A derivative-free policy optimization approach,” <i>IEEE Transactions on Automatic Control</i>, vol. 67, no. 12, pp. 6429&ndash;6444, 2022. [<a href="https://arxiv.org/abs/1912.09135" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
 <li><p><b>Yujie Tang</b>, Junshan Zhang and Na Li. &ldquo;Distributed zero-order algorithms for nonconvex multi-agent optimization,&rdquo; <i>IEEE Transactions on Control of Network Systems</i>, vol. 8, no. 1, pp. 269&ndash;281, Mar. 2021. [<a href="https://arxiv.org/abs/1908.11444" target=&ldquo;blank&rdquo;>arXiv</a>]
@@ -82,36 +90,42 @@ MathJax.Hub.Config({
 </ol>
 <h2>Conference Papers</h2>
 <ol>
-<li><p>Xin Chen, <b>Yujie Tang</b> and Na Li. &ldquo;Improve single-point zeroth-order optimization using high-pass and low-pass filters,&rdquo; in <i>Proceedings of the 39th International Conference on Machine Learning</i>, pp. 3603&ndash;3620, Jul. 2022.
+<li><p><b>Yujie Tang</b> and Yang Zheng. &ldquo;On the global optimality of direct policy search for nonsmooth \(\mathcal{H}_\infty\) output-feedback control,&rdquo; in <i>Proceedings of the 62nd IEEE Conference on Decision and Control (CDC)</i>, pp. 6148&ndash;6153, 2023.  [<a href="https://arxiv.org/abs/2304.00753" target=&ldquo;blank&rdquo;>arXiv</a>]
+</p>
+</li>
+<li><p>Zhaolin Ren, <b>Yujie Tang</b> and Na Li. &ldquo;Escaping saddle points in zeroth-order optimization: the power of two-point estimators,&rdquo; in <i>Proceedings of the 40th International Conference on Machine Learning</i>, pp. 28914&ndash;28975, 2023. [<a href="https://openreview.net/pdf?id=qZ1reqm5BM" target=&ldquo;blank&rdquo;>link</a>]
+</p>
+</li>
+<li><p>Xin Chen, <b>Yujie Tang</b> and Na Li. &ldquo;Improve single-point zeroth-order optimization using high-pass and low-pass filters,&rdquo; in <i>Proceedings of the 39th International Conference on Machine Learning</i>, pp. 3603&ndash;3620, 2022.
 </p>
 </li>
 <li><p>Tianpeng Zhang, Victor Qin, <b>Yujie Tang</b> and Na Li. &ldquo;Source seeking by dynamic source location estimation,&rdquo; in <i>2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, pp. 2598&ndash;2605, 2021.
 </p>
 </li>
-<li><p><b>Yujie Yang</b>, Yang Zheng and Na Li. &ldquo;Analysis of the Optimization Landscape of Linear Quadratic Gaussian (LQG) Control,&rdquo; in <i>Proceedings of the 3rd Conference on Learning for Dynamics and Control</i>, pp. 599–-610, Jun. 2021.
+<li><p><b>Yujie Yang</b>, Yang Zheng and Na Li. &ldquo;Analysis of the Optimization Landscape of Linear Quadratic Gaussian (LQG) Control,&rdquo; in <i>Proceedings of the 3rd Conference on Learning for Dynamics and Control</i>, pp. 599–-610, 2021.
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Zhaolin Ren and Na Li. &ldquo;Zeroth-order feedback optimization for cooperative multi-agent systems,&rdquo; in <i>Proceedings of the 59th IEEE Conference on Decision and Control</i>, pp. 3649–-3656, Dec. 2020.
+<li><p><b>Yujie Tang</b>, Zhaolin Ren and Na Li. &ldquo;Zeroth-order feedback optimization for cooperative multi-agent systems,&rdquo; in <i>Proceedings of the 59th IEEE Conference on Decision and Control</i>, pp. 3649–-3656, 2020.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Steven Low. &ldquo;A second-order saddle point method for time-varying optimization,&rdquo; in <i>Proceedings of the 58th IEEE Conference on Decision and Control</i>, pp. 3928–-3935, Dec. 2019.
+<li><p><b>Yujie Tang</b> and Steven Low. &ldquo;A second-order saddle point method for time-varying optimization,&rdquo; in <i>Proceedings of the 58th IEEE Conference on Decision and Control</i>, pp. 3928–-3935, 2019.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Na Li. &ldquo;Distributed zero-order algorithms for nonconvex multi-agent optimization,&rdquo; in <i>Proceedings of the 57th Annual Allerton Conference on Communication, Control, and Computing</i>, pp. 781–-786, Sep. 2019.
+<li><p><b>Yujie Tang</b> and Na Li. &ldquo;Distributed zero-order algorithms for nonconvex multi-agent optimization,&rdquo; in <i>Proceedings of the 57th Annual Allerton Conference on Communication, Control, and Computing</i>, pp. 781–-786, 2019.
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Emiliano Dall’Anese, Andrey Bernstein and Steven H. Low. &ldquo;A feedback-based regularized primal-dual gradient method for time-varying nonconvex optimization,&rdquo; in <i>Proceedings of the 57th IEEE Conference on Decision and Control</i>, pp. 3244–-3250, Dec. 2018.
+<li><p><b>Yujie Tang</b>, Emiliano Dall’Anese, Andrey Bernstein and Steven H. Low. &ldquo;A feedback-based regularized primal-dual gradient method for time-varying nonconvex optimization,&rdquo; in <i>Proceedings of the 57th IEEE Conference on Decision and Control</i>, pp. 3244–-3250, 2018.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Steven Low. &ldquo;Distributed algorithm for time-varying optimal power flow,&rdquo; in <i>Proceedings of the 56th IEEE Conference on Decision and Control</i>, pp. 3264–-3270, Dec. 2017.
+<li><p><b>Yujie Tang</b> and Steven Low. &ldquo;Distributed algorithm for time-varying optimal power flow,&rdquo; in <i>Proceedings of the 56th IEEE Conference on Decision and Control</i>, pp. 3264–-3270, 2017.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Steven H. Low. &ldquo;Optimal placement of energy storage in distribution networks,&rdquo; in <i>Proceedings of the 55th IEEE Conference on Decision and Control</i>, pp. 3258–-3264, Dec. 2016.</p>
+<li><p><b>Yujie Tang</b> and Steven H. Low. &ldquo;Optimal placement of energy storage in distribution networks,&rdquo; in <i>Proceedings of the 55th IEEE Conference on Decision and Control</i>, pp. 3258–-3264, 2016.</p>
 </li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-24 10:16:16 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-04-12 17:09:20 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
