--- a/publications.html
+++ b/publications.html
@@ -6,15 +6,6 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Publications</title>
-<!-- MathJax -->
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
-</script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-	  TeX: { equationNumbers: { autoNumber: "AMS" } }
-});
-</script>
-<!-- End MathJax -->
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -33,6 +24,9 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints</h2>
 <ol>
+<li><p>Yang Zheng, Chih-fan Pai and <b>Yujie Tang</b>. &ldquo;Benign nonconvex landscapes in optimal and robust control, Part II: Extended Convex Lifting.&rdquo; [<a href="https://arxiv.org/abs/2406.04001" target=&ldquo;blank&rdquo;>arXiv</a>]
+</p>
+</li>
 <li><p>Silan Zhang and <b>Yujie Tang</b>. &ldquo;Zeroth-order Katyusha: An accelerated derivative-free method for composite convex optimization.&rdquo; [<a href="files/Zeroth-Order_Katyusha_1.pdf" target=&ldquo;blank&rdquo;>link</a>]
 </p>
 </li>
@@ -125,7 +119,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-12 17:09:20 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-06-07 11:08:25 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
