--- a/publications.html
+++ b/publications.html
@@ -6,6 +6,15 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Publications</title>
+<!-- MathJax -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
+</script>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+	  TeX: { equationNumbers: { autoNumber: "AMS" } }
+});
+</script>
+<!-- End MathJax -->
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -54,10 +63,10 @@
 <li><p><b>Yujie Tang</b>, Emiliano Dall’Anese, Andrey Bernstein and Steven Low. &ldquo;Running primal-dual gradient method for time-varying nonconvex problems,&rdquo; <i>SIAM Journal on Control and Optimization</i>, vol. 60, no. 4, pp. 1970&ndash;1990, 2022. [<a href="https://arxiv.org/abs/1812.00613" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p>Xin Chen, Guannan Qu, <b>Yujie Tang</b>, Steven Low and Na Li. &ldquo;Reinforcement learning for selective key applications in power systems: Recent advances and future challenges,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 13, no. 4, pp. 2935&ndash;2958, Jul. 2022.
+<li><p>Xin Chen, Guannan Qu, <b>Yujie Tang</b>, Steven Low and Na Li. &ldquo;Reinforcement learning for selective key applications in power systems: Recent advances and future challenges,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 13, no. 4, pp. 2935&ndash;2958, 2022.
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Vikram Ramanathan, Junshan Zhang and Na Li. “Communication-efficient distributed SGD with compressed sensing,” <i>IEEE Control Systems Letters</i>, vol. 6, pp. 2054&ndash;2059.
+<li><p><b>Yujie Tang</b>, Vikram Ramanathan, Junshan Zhang and Na Li. “Communication-efficient distributed SGD with compressed sensing,” <i>IEEE Control Systems Letters</i>, vol. 6, pp. 2054&ndash;2059, 2021.
 </p>
 </li>
 <li><p>Yingying Li, <b>Yujie Tang</b>, Runyu Zhang and Na Li. “Distributed reinforcement learning for decentralized linear quadratic control: A derivative-free policy optimization approach,” <i>IEEE Transactions on Automatic Control</i>, vol. 67, no. 12, pp. 6429&ndash;6444, 2022. [<a href="https://arxiv.org/abs/1912.09135" target=&ldquo;blank&rdquo;>arXiv</a>]
@@ -119,7 +128,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-07 11:08:25 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-06-08 03:22:54 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
