--- a/publications.html
+++ b/publications.html
@@ -33,102 +33,105 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints</h2>
 <ol>
-<li><p>Yang Zheng, Chih-fan Pai and <b>Yujie Tang</b>. &ldquo;Benign nonconvex landscapes in optimal and robust control, Part II: Extended Convex Lifting.&rdquo; [<a href="https://arxiv.org/abs/2406.04001" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Huaiyi Mu, Yujie Yang and Zhongkui Li. &ldquo;Variance-reduced gradient estimator for nonconvex zeroth-order distributed optimization.&rdquo; [<a href="files/Zeroth-Order-VR-GE.pdf" target=&ldquo;blank&rdquo;>link</a>]
 </p>
 </li>
-<li><p>Silan Zhang and <b>Yujie Tang</b>. &ldquo;Zeroth-order Katyusha: An accelerated derivative-free method for composite convex optimization.&rdquo; [<a href="files/Zeroth-Order_Katyusha_1.pdf" target=&ldquo;blank&rdquo;>link</a>]
+<li><p>Silan Zhang and Yujie Tang. &ldquo;Zeroth-order Katyusha: An accelerated derivative-free method for composite convex optimization,&rdquo; to appear in <i>the 64th IEEE Conference on Decision and Control (CDC 2025)</i> [<a href="https://arxiv.org/abs/2407.09190" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p>Yang Zheng, Chih-fan Pai and <b>Yujie Tang</b>. &ldquo;Benign nonconvex landscapes in optimal and robust control, Part I: Global optimality.&rdquo; [<a href="https://arxiv.org/abs/2312.15332" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yang Zheng, Chih-fan Pai and Yujie Tang. &ldquo;Benign nonconvex landscapes in optimal and robust control, Part II: Extended Convex Lifting.&rdquo; [<a href="https://arxiv.org/abs/2406.04001" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p>Ruiyang Jin, <b>Yujie Tang</b> and Jie Song. &ldquo;Zeroth-order feedback-based optimization for distributed demand response.&rdquo; [<a href="https://arxiv.org/abs/2311.00372" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yang Zheng, Chih-fan Pai and Yujie Tang. &ldquo;Benign nonconvex landscapes in optimal and robust control, Part I: Global optimality.&rdquo; [<a href="https://arxiv.org/abs/2312.15332" target=&ldquo;blank&rdquo;>arXiv</a>]
+</p>
+</li>
+<li><p>Ruiyang Jin, Yujie Tang and Jie Song. &ldquo;Zeroth-order feedback-based optimization for distributed demand response.&rdquo; [<a href="https://arxiv.org/abs/2311.00372" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
 </ol>
 <h2>Journal Articles</h2>
 <ol>
-<li><p>Yize Li, Chao Lu, <b>Yujie Tang</b>, Chen Fang, Yong Cui. &ldquo;Dynamic control and time-delayed channel scheduling co-design for voltage control in active distribution networks,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 15, no. 2, pp. 1837&ndash;1848, 2024.
+<li><p>Yize Li, Chao Lu, Yujie Tang, Chen Fang, Yong Cui. &ldquo;Dynamic control and time-delayed channel scheduling co-design for voltage control in active distribution networks,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 15, no. 2, pp. 1837&ndash;1848, 2024.
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Yang Zheng and Na Li. &ldquo;Analysis of the optimization landscape of Linear Quadratic Gaussian (LQG) control,&rdquo; <i>Mathematical Programming</i>, vol. 202, pp. 399&ndash;444, 2023. [<a href="https://arxiv.org/abs/2102.04393" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yujie Tang, Yang Zheng and Na Li. &ldquo;Analysis of the optimization landscape of Linear Quadratic Gaussian (LQG) control,&rdquo; <i>Mathematical Programming</i>, vol. 202, pp. 399&ndash;444, 2023. [<a href="https://arxiv.org/abs/2102.04393" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p>Tianpeng Zhang, Victor Qin, <b>Yujie Tang</b> and Na Li. &ldquo;Distributed information-based source seeking,&rdquo; <i>IEEE Transactions on Robotics</i>, vol. 39, no. 6, pp. 4749&ndash;4767, 2023. [<a href="https://arxiv.org/abs/2209.09421" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Tianpeng Zhang, Victor Qin, Yujie Tang and Na Li. &ldquo;Distributed information-based source seeking,&rdquo; <i>IEEE Transactions on Robotics</i>, vol. 39, no. 6, pp. 4749&ndash;4767, 2023. [<a href="https://arxiv.org/abs/2209.09421" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Zhaolin Ren and Na Li. “Zeroth-order feedback optimization for cooperative multi-agent systems,” <i>Automatica</i>, vol. 148, 110741, 2023. [<a href="https://arxiv.org/abs/2011.09728" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yujie Tang, Zhaolin Ren and Na Li. “Zeroth-order feedback optimization for cooperative multi-agent systems,” <i>Automatica</i>, vol. 148, 110741, 2023. [<a href="https://arxiv.org/abs/2011.09728" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Emiliano Dall’Anese, Andrey Bernstein and Steven Low. &ldquo;Running primal-dual gradient method for time-varying nonconvex problems,&rdquo; <i>SIAM Journal on Control and Optimization</i>, vol. 60, no. 4, pp. 1970&ndash;1990, 2022. [<a href="https://arxiv.org/abs/1812.00613" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yujie Tang, Emiliano Dall’Anese, Andrey Bernstein and Steven Low. &ldquo;Running primal-dual gradient method for time-varying nonconvex problems,&rdquo; <i>SIAM Journal on Control and Optimization</i>, vol. 60, no. 4, pp. 1970&ndash;1990, 2022. [<a href="https://arxiv.org/abs/1812.00613" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p>Xin Chen, Guannan Qu, <b>Yujie Tang</b>, Steven Low and Na Li. &ldquo;Reinforcement learning for selective key applications in power systems: Recent advances and future challenges,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 13, no. 4, pp. 2935&ndash;2958, 2022.
+<li><p>Xin Chen, Guannan Qu, Yujie Tang, Steven Low and Na Li. &ldquo;Reinforcement learning for selective key applications in power systems: Recent advances and future challenges,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 13, no. 4, pp. 2935&ndash;2958, 2022.
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Vikram Ramanathan, Junshan Zhang and Na Li. “Communication-efficient distributed SGD with compressed sensing,” <i>IEEE Control Systems Letters</i>, vol. 6, pp. 2054&ndash;2059, 2021.
+<li><p>Yujie Tang, Vikram Ramanathan, Junshan Zhang and Na Li. “Communication-efficient distributed SGD with compressed sensing,” <i>IEEE Control Systems Letters</i>, vol. 6, pp. 2054&ndash;2059, 2021.
 </p>
 </li>
-<li><p>Yingying Li, <b>Yujie Tang</b>, Runyu Zhang and Na Li. “Distributed reinforcement learning for decentralized linear quadratic control: A derivative-free policy optimization approach,” <i>IEEE Transactions on Automatic Control</i>, vol. 67, no. 12, pp. 6429&ndash;6444, 2022. [<a href="https://arxiv.org/abs/1912.09135" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yingying Li, Yujie Tang, Runyu Zhang and Na Li. “Distributed reinforcement learning for decentralized linear quadratic control: A derivative-free policy optimization approach,” <i>IEEE Transactions on Automatic Control</i>, vol. 67, no. 12, pp. 6429&ndash;6444, 2022. [<a href="https://arxiv.org/abs/1912.09135" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Junshan Zhang and Na Li. &ldquo;Distributed zero-order algorithms for nonconvex multi-agent optimization,&rdquo; <i>IEEE Transactions on Control of Network Systems</i>, vol. 8, no. 1, pp. 269&ndash;281, Mar. 2021. [<a href="https://arxiv.org/abs/1908.11444" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yujie Tang, Junshan Zhang and Na Li. &ldquo;Distributed zero-order algorithms for nonconvex multi-agent optimization,&rdquo; <i>IEEE Transactions on Control of Network Systems</i>, vol. 8, no. 1, pp. 269&ndash;281, Mar. 2021. [<a href="https://arxiv.org/abs/1908.11444" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Guannan Qu and Na Li. “Semi-global exponential stability of primal-dual gradient dynamics for constrained convex optimization,” <i>Systems &amp; Control Letters</i>, vol. 144, Oct. 2020. [<a href="https://arxiv.org/abs/1903.09580" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yujie Tang, Guannan Qu and Na Li. “Semi-global exponential stability of primal-dual gradient dynamics for constrained convex optimization,” <i>Systems &amp; Control Letters</i>, vol. 144, Oct. 2020. [<a href="https://arxiv.org/abs/1903.09580" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Krishnamurthy Dvijotham and Steven Low. “Real-time optimal power flow,” <i>IEEE Transactions on Smart Grid</i>, vol. 8, no. 6, pp. 2963&ndash;2973, Nov. 2017.
+<li><p>Yujie Tang, Krishnamurthy Dvijotham and Steven Low. “Real-time optimal power flow,” <i>IEEE Transactions on Smart Grid</i>, vol. 8, no. 6, pp. 2963&ndash;2973, Nov. 2017.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Steven H. Low. &ldquo;Optimal placement of energy storage in distribution networks,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 8, no. 6, pp. 3094–-3103, Nov. 2017.
+<li><p>Yujie Tang and Steven H. Low. &ldquo;Optimal placement of energy storage in distribution networks,&rdquo; <i>IEEE Transactions on Smart Grid</i>, vol. 8, no. 6, pp. 3094–-3103, Nov. 2017.
 </p>
 </li>
-<li><p>Qiuyu Peng, <b>Yujie Tang</b> and Steven Low. &ldquo;Feeder reconfiguration in distribution networks based on convex relaxation of OPF,&rdquo; <i>IEEE Transactions on Power Systems</i>, vol. 30, no. 4, pp. 1793&ndash;1804, Jul. 2015.
+<li><p>Qiuyu Peng, Yujie Tang and Steven Low. &ldquo;Feeder reconfiguration in distribution networks based on convex relaxation of OPF,&rdquo; <i>IEEE Transactions on Power Systems</i>, vol. 30, no. 4, pp. 1793&ndash;1804, Jul. 2015.
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Laming Chen and Yuantao Gu. &ldquo;On the performance bound of sparse estimation with sensing matrix perturbation,&rdquo; <i>IEEE Transactions on Signal Processing</i>, vol. 61, no. 17, pp. 4372–-4386, Sep. 2013.
+<li><p>Yujie Tang, Laming Chen and Yuantao Gu. &ldquo;On the performance bound of sparse estimation with sensing matrix perturbation,&rdquo; <i>IEEE Transactions on Signal Processing</i>, vol. 61, no. 17, pp. 4372–-4386, Sep. 2013.
 </p>
 </li>
 </ol>
 <h2>Conference Papers</h2>
 <ol>
-<li><p><b>Yujie Tang</b> and Yang Zheng. &ldquo;On the global optimality of direct policy search for nonsmooth \(\mathcal{H}_\infty\) output-feedback control,&rdquo; in <i>Proceedings of the 62nd IEEE Conference on Decision and Control (CDC)</i>, pp. 6148&ndash;6153, 2023.  [<a href="https://arxiv.org/abs/2304.00753" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yujie Tang and Yang Zheng. &ldquo;On the global optimality of direct policy search for nonsmooth \(\mathcal{H}_\infty\) output-feedback control,&rdquo; in <i>Proceedings of the 62nd IEEE Conference on Decision and Control (CDC)</i>, pp. 6148&ndash;6153, 2023.  [<a href="https://arxiv.org/abs/2304.00753" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p>Zhaolin Ren, <b>Yujie Tang</b> and Na Li. &ldquo;Escaping saddle points in zeroth-order optimization: the power of two-point estimators,&rdquo; in <i>Proceedings of the 40th International Conference on Machine Learning</i>, pp. 28914&ndash;28975, 2023. [<a href="https://openreview.net/pdf?id=qZ1reqm5BM" target=&ldquo;blank&rdquo;>link</a>]
+<li><p>Zhaolin Ren, Yujie Tang and Na Li. &ldquo;Escaping saddle points in zeroth-order optimization: the power of two-point estimators,&rdquo; in <i>Proceedings of the 40th International Conference on Machine Learning</i>, pp. 28914&ndash;28975, 2023. [<a href="https://openreview.net/pdf?id=qZ1reqm5BM" target=&ldquo;blank&rdquo;>link</a>]
 </p>
 </li>
-<li><p>Xin Chen, <b>Yujie Tang</b> and Na Li. &ldquo;Improve single-point zeroth-order optimization using high-pass and low-pass filters,&rdquo; in <i>Proceedings of the 39th International Conference on Machine Learning</i>, pp. 3603&ndash;3620, 2022.
+<li><p>Xin Chen, Yujie Tang and Na Li. &ldquo;Improve single-point zeroth-order optimization using high-pass and low-pass filters,&rdquo; in <i>Proceedings of the 39th International Conference on Machine Learning</i>, pp. 3603&ndash;3620, 2022.
 </p>
 </li>
-<li><p>Tianpeng Zhang, Victor Qin, <b>Yujie Tang</b> and Na Li. &ldquo;Source seeking by dynamic source location estimation,&rdquo; in <i>2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, pp. 2598&ndash;2605, 2021.
+<li><p>Tianpeng Zhang, Victor Qin, Yujie Tang and Na Li. &ldquo;Source seeking by dynamic source location estimation,&rdquo; in <i>2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, pp. 2598&ndash;2605, 2021.
 </p>
 </li>
 <li><p><b>Yujie Yang</b>, Yang Zheng and Na Li. &ldquo;Analysis of the Optimization Landscape of Linear Quadratic Gaussian (LQG) Control,&rdquo; in <i>Proceedings of the 3rd Conference on Learning for Dynamics and Control</i>, pp. 599–-610, 2021.
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Zhaolin Ren and Na Li. &ldquo;Zeroth-order feedback optimization for cooperative multi-agent systems,&rdquo; in <i>Proceedings of the 59th IEEE Conference on Decision and Control</i>, pp. 3649–-3656, 2020.
+<li><p>Yujie Tang, Zhaolin Ren and Na Li. &ldquo;Zeroth-order feedback optimization for cooperative multi-agent systems,&rdquo; in <i>Proceedings of the 59th IEEE Conference on Decision and Control</i>, pp. 3649–-3656, 2020.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Steven Low. &ldquo;A second-order saddle point method for time-varying optimization,&rdquo; in <i>Proceedings of the 58th IEEE Conference on Decision and Control</i>, pp. 3928–-3935, 2019.
+<li><p>Yujie Tang and Steven Low. &ldquo;A second-order saddle point method for time-varying optimization,&rdquo; in <i>Proceedings of the 58th IEEE Conference on Decision and Control</i>, pp. 3928–-3935, 2019.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Na Li. &ldquo;Distributed zero-order algorithms for nonconvex multi-agent optimization,&rdquo; in <i>Proceedings of the 57th Annual Allerton Conference on Communication, Control, and Computing</i>, pp. 781–-786, 2019.
+<li><p>Yujie Tang and Na Li. &ldquo;Distributed zero-order algorithms for nonconvex multi-agent optimization,&rdquo; in <i>Proceedings of the 57th Annual Allerton Conference on Communication, Control, and Computing</i>, pp. 781–-786, 2019.
 </p>
 </li>
-<li><p><b>Yujie Tang</b>, Emiliano Dall’Anese, Andrey Bernstein and Steven H. Low. &ldquo;A feedback-based regularized primal-dual gradient method for time-varying nonconvex optimization,&rdquo; in <i>Proceedings of the 57th IEEE Conference on Decision and Control</i>, pp. 3244–-3250, 2018.
+<li><p>Yujie Tang, Emiliano Dall’Anese, Andrey Bernstein and Steven H. Low. &ldquo;A feedback-based regularized primal-dual gradient method for time-varying nonconvex optimization,&rdquo; in <i>Proceedings of the 57th IEEE Conference on Decision and Control</i>, pp. 3244–-3250, 2018.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Steven Low. &ldquo;Distributed algorithm for time-varying optimal power flow,&rdquo; in <i>Proceedings of the 56th IEEE Conference on Decision and Control</i>, pp. 3264–-3270, 2017.
+<li><p>Yujie Tang and Steven Low. &ldquo;Distributed algorithm for time-varying optimal power flow,&rdquo; in <i>Proceedings of the 56th IEEE Conference on Decision and Control</i>, pp. 3264–-3270, 2017.
 </p>
 </li>
-<li><p><b>Yujie Tang</b> and Steven H. Low. &ldquo;Optimal placement of energy storage in distribution networks,&rdquo; in <i>Proceedings of the 55th IEEE Conference on Decision and Control</i>, pp. 3258–-3264, 2016.</p>
+<li><p>Yujie Tang and Steven H. Low. &ldquo;Optimal placement of energy storage in distribution networks,&rdquo; in <i>Proceedings of the 55th IEEE Conference on Decision and Control</i>, pp. 3258–-3264, 2016.</p>
 </li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-08 03:22:54 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-09-29 00:57:27 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
