--- a/teaching.html
+++ b/teaching.html
@@ -31,6 +31,58 @@ MathJax.Hub.Config({
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
+<h3>Probability and Mathematical Statistics, Peking University</h3>
+<p>This is an introductory course on probability theory and mathematical statistics for undergraduate students studying engineering and applied sciences. Topics of this course include
+</p>
+<ul>
+<li><p>Probability theory
+</p>
+<ul>
+<li><p>Basics of probability theory (<a href="files/Courses/Prob_Stats/2024_Fall/Slides-Ch01.pdf" target=&ldquo;blank&rdquo;>Slides</a>)
+</p>
+</li>
+<li><p>Discrete random variables and their expectations
+</p>
+</li>
+<li><p>Continuous random variables and their expectations
+</p>
+</li>
+<li><p>Further topics
+</p>
+<ul>
+<li><p>Distributions of functions of random variables
+</p>
+</li>
+<li><p>Covariance and correlation
+</p>
+</li>
+<li><p>Moments and moment generating functions
+</p>
+</li>
+<li><p>Conditional distribution and conditional expectation
+</p>
+</li></ul>
+</li></ul>
+</li>
+<li><p>Mathematical statistics
+</p>
+<ul>
+<li><p>Basics of mathematical statistics
+</p>
+</li>
+<li><p>Parameter estimation
+</p>
+</li>
+<li><p>Hypothesis testing
+</p>
+</li>
+<li><p>Linear regression analysis
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <h3>Fundamentals of Distributed Optimization, Peking University</h3>
 <p>This course introduces fundamentals of distributed optimization for beginning graduate students in engineering and applied mathematics, with an emphasis on the theoretical aspects. Topics covered in this course include a review of convex analysis and centralized first-order methods, consensus methods for distributed averaging, decentralized gradient descent, gradient tracking methods, decentralized ADMM, time-varying communication networks, and a brief introduction to distributed optimization in federated learning.
 </p>
@@ -85,7 +137,7 @@ ACM/CMS 113&nbsp;&nbsp;&nbsp;Fall 2014&nbsp;&nbsp;&nbsp;Instructor: Venkat Chand
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-12 17:09:20 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-09-29 01:13:27 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
