--- a/teaching.html
+++ b/teaching.html
@@ -62,6 +62,9 @@ MathJax.Hub.Config({
 <li><p>Conditional distribution and conditional expectation
 </p>
 </li></ul>
+</li>
+<li><p>Law of large numbers and central limit theorem
+</p>
 </li></ul>
 </li>
 <li><p>Mathematical statistics
@@ -137,7 +140,7 @@ ACM/CMS 113&nbsp;&nbsp;&nbsp;Fall 2014&nbsp;&nbsp;&nbsp;Instructor: Venkat Chand
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-29 01:13:27 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-09-29 01:48:57 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
