--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints</h2>
 <ol>
-<li><p>Huaiyi Mu, Yujie Yang and Zhongkui Li. &ldquo;Variance-reduced gradient estimator for nonconvex zeroth-order distributed optimization.&rdquo; [<a href="files/Zeroth-Order-VR-GE.pdf" target=&ldquo;blank&rdquo;>link</a>]
+<li><p>Huaiyi Mu, Yujie Yang and Zhongkui Li. &ldquo;Variance-reduced gradient estimator for nonconvex zeroth-order distributed optimization.&rdquo; [<a href="https://arxiv.org/abs/2409.19567" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
 <li><p>Silan Zhang and Yujie Tang. &ldquo;Zeroth-order Katyusha: An accelerated derivative-free method for composite convex optimization,&rdquo; to appear in <i>the 64th IEEE Conference on Decision and Control (CDC 2025)</i> [<a href="https://arxiv.org/abs/2407.09190" target=&ldquo;blank&rdquo;>arXiv</a>]
@@ -131,7 +131,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-29 00:57:27 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-10-01 14:33:37 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
