--- a/presentations.html
+++ b/presentations.html
@@ -33,6 +33,13 @@ MathJax.Hub.Config({
 </div>
 <h2>Selected Talks</h2>
 <ul>
+<li><p>Benign Nonconvex Landscapes in Optimal and Robust Control [<a href="files/slides_CCC2024_workshop.pdf" target=&ldquo;blank&rdquo;>slides</a>]
+</p>
+<ul>
+<li><p>The 43rd Chinese Control Conference (CCC 2024), Pre-conference Workshop <i>Direct Data-Driven Analysis and Design of Control Systems</i>
+</p>
+</li></ul>
+</li>
 <li><p>On the Global Optimality of Direct Policy Search for Nonsmooth \(\mathcal{H}_\infty\) Output-Feedback Control [<a href="files/slides_CMS_Annual_2023.pdf" target=&ldquo;blank&rdquo;>slides</a>]
 </p>
 <ul>
@@ -43,7 +50,7 @@ MathJax.Hub.Config({
 <li><p>Model-Free Optimization and Learning for Multi-Agent Systems [<a href="files/slides_cdc2023_workshop.pdf" target=&ldquo;blank&rdquo;>slides</a>]
 </p>
 <ul>
-<li><p>IEEE CDC 2023 Pre-Conference Workshop <i>Distributed Control, Optimization and Learning for Multi-agent Systems</i>
+<li><p>IEEE CDC 2023 Pre-conference Workshop <i>Distributed Control, Optimization and Learning for Multi-agent Systems</i>
 </p>
 </li></ul>
 </li>
@@ -147,7 +154,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-12 17:09:20 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-10-01 14:41:33 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
