--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,11 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints</h2>
 <ol>
-<li><p>Huaiyi Mu, Yujie Yang and Zhongkui Li. &ldquo;Variance-reduced gradient estimator for nonconvex zeroth-order distributed optimization.&rdquo; [<a href="https://arxiv.org/abs/2409.19567" target=&ldquo;blank&rdquo;>arXiv</a>]
+<li><p>Yingpeng Duan and Yujie Tang. &ldquo;Zeroth-order feedback optimization in
+multi-agent systems: Tackling coupled constraints.&rdquo; [<a href="./files/ZFO-coupled-constraints.pdf" target=&ldquo;blank&rdquo;>link</a>]
+</p>
+</li>
+<li><p>Huaiyi Mu, Yujie Tang and Zhongkui Li. &ldquo;Variance-reduced gradient estimator for nonconvex zeroth-order distributed optimization.&rdquo; [<a href="https://arxiv.org/abs/2409.19567" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
 <li><p>Silan Zhang and Yujie Tang. &ldquo;Zeroth-order Katyusha: An accelerated derivative-free method for composite convex optimization,&rdquo; to appear in <i>the 63th IEEE Conference on Decision and Control (CDC 2024)</i> [<a href="https://arxiv.org/abs/2407.09190" target=&ldquo;blank&rdquo;>arXiv</a>]
@@ -131,7 +135,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-01 14:33:37 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-10-16 22:50:29 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
