--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@ MathJax.Hub.Config({
 <li><p>Probability theory
 </p>
 <ul>
-<li><p>Basics of probability theory (<a href="files/Courses/Prob_Stats/2024_Fall/Slides-Ch01.pdf" target=&ldquo;blank&rdquo;>Slides</a>)
+<li><p>Basics of probability theory
 </p>
 </li>
 <li><p>Discrete random variables and their expectations
@@ -86,6 +86,8 @@ MathJax.Hub.Config({
 
 </li>
 </ul>
+<p>Lectures notes in Chinese: <a href="https://www.bananaspace.org/wiki/%E8%AE%B2%E4%B9%89:%E6%A6%82%E7%8E%87%E4%B8%8E%E6%95%B0%E7%90%86%E7%BB%9F%E8%AE%A1(PKU-COE)" target=&ldquo;blank&rdquo;>概率与数理统计讲义</a>
+</p>
 <h3>Fundamentals of Distributed Optimization, Peking University</h3>
 <p>This course introduces fundamentals of distributed optimization for beginning graduate students in engineering and applied mathematics, with an emphasis on the theoretical aspects. Topics covered in this course include a review of convex analysis and centralized first-order methods, consensus methods for distributed averaging, decentralized gradient descent, gradient tracking methods, decentralized ADMM, time-varying communication networks, and a brief introduction to distributed optimization in federated learning.
 </p>
@@ -140,7 +142,7 @@ ACM/CMS 113&nbsp;&nbsp;&nbsp;Fall 2014&nbsp;&nbsp;&nbsp;Instructor: Venkat Chand
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-29 01:48:57 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-27 18:32:38 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
